export const snapshot = {};

snapshot[`Issue Comment Add Command - With Body Flag 1`] = `
stdout:
"✓ Comment added to TEST-123
https://linear.app/issue/TEST-123#comment-uuid-456
"
stderr:
""
`;

snapshot[`Issue Comment Add Command - With Caller Supplied ID 1`] = `
stdout:
"✓ Comment added to TEST-123
https://linear.app/issue/TEST-123#comment-uuid
"
stderr:
""
`;

snapshot[`Issue Comment Add Command - With Parent Flag 1`] = `
stdout:
"✓ Comment added to TEST-123
https://linear.app/issue/TEST-123#comment-uuid-reply-789
"
stderr:
""
`;

snapshot[`Issue Comment Add Command - Help 1`] = `
stdout:
"
Usage: add [issueId]

Description:

  Add a comment or reply; images uploaded with --attach render inline             
                                                                                  
  Linear Markdown: a plain Linear URL creates a mention; \`@name\`, \`@[Name](id)\`,  
  and \`[Name](url)\` do not. Get a person's URL from the \`url\` field of            
  \`linear team members <TEAM> --json\`, or an issue's from \`linear issue url <ID>\`.
  Run \`linear markdown\` for collapsible sections and the full reference.          

Options:

  -h, --help                - Show this help.                                                                
  -b, --body    <text>      - Comment body text                                                              
  --body-file   <path>      - Read comment body from a file (preferred for markdown content)                 
  -p, --parent  <id>        - Parent comment ID for replies                                                  
  -a, --attach  <filepath>  - Upload a file and add its Markdown link to the comment (images render inline;  
                              repeatable)                                                                    
  --public                  - Upload attached images to a public, unauthenticated URL (default: private,     
                              workspace-members only)                                                        

"
stderr:
""
`;
